--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,12 @@
     "xlsx": "^0.18.5",
     "zod": "^4.0.10"
   },
+  "overrides": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.18"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@storybook/addon-essentials": "^8.0.0",
@@ -77,21 +83,21 @@
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.18",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "msw": "^1.3.2",
+    "msw": "^2.10.4",
     "openapi-diff": "^0.23.7",
     "orval": "^7.10.0",
     "postcss": "^8.5.6",
     "storybook": "^8.0.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "5.2.2"
   },
   "msw": {
     "workerDirectory": "public"
