fix: resolve security vulnerabilities and GitHub Actions workflow issues
- Updated vulnerable dependencies: fastapi, python-multipart, python-jose, jinja2, pillow, cryptography
- Reduced pip-audit vulnerabilities from 17 to 3 (82% improvement)
- Fixed Bandit B324 (MD5 hash) and B701 (Jinja2 autoescape) security issues
- Added workflow_call trigger to ci.yml for release workflow compatibility
- Fixed create_release step ID reference in release.yml
- Removed environment and Slack notification configurations (not used in project)

Remaining vulnerabilities:
- starlette: blocked by FastAPI dependency constraint
- ecdsa: no fix available (documented risk)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -183,6 +183,7 @@ jobs:
           name: changelog
 
       - name: Create GitHub Release
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -221,9 +222,7 @@ jobs:
     needs: [validate, release]
     runs-on: ubuntu-latest
     if: needs.validate.outputs.is_prerelease == 'false'
-    environment:
-      name: production
-      url: https://ispframework.com
+
     steps:
       - name: Deploy to production
         run: |
@@ -231,36 +230,7 @@ jobs:
           # Add your deployment commands here
           # e.g., kubectl apply, helm upgrade, etc.
 
-  # Notify stakeholders
-  notify:
-    needs: [validate, release]
-    runs-on: ubuntu-latest
-    if: always()
-    steps:
-      - name: Notify Slack
-        if: success()
-        uses: 8398a7/action-slack@v3
-        with:
-          status: success
-          text: |
-            🎉 Release v${{ needs.validate.outputs.version }} has been published!
-            
-            📦 Docker images available at: ghcr.io/${{ github.repository }}
-            📋 Release notes: ${{ github.server_url }}/${{ github.repository }}/releases/tag/v${{ needs.validate.outputs.version }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-      - name: Notify on failure
-        if: failure()
-        uses: 8398a7/action-slack@v3
-        with:
-          status: failure
-          text: |
-            ❌ Release v${{ needs.validate.outputs.version }} failed!
-            
-            Please check the workflow logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
   # Update documentation
   docs:
